--- a/css/Home.css
+++ b/css/Home.css
@@ -1,8 +1,9 @@
-a{ color:black;
+a { color:black;
     text-decoration:none;
      font-size:1.5em;
      padding-left: 80px;
     font-family: Arial, Helvetica, sans-serif;
+    hover
    }
      .tabs{
          display: flex;
@@ -10,21 +11,31 @@ a{ color:black;
          border-radius: 20px;
      }
 
-     .bg{
-background-image: url("img_bg1.jpg");
+     img{
+
 height: 100%; 
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
 }
 .content{
- padding-left: 40pc;
+ height: 100%;
+ width: 100%;
+ align-items: center;
+ position: absolute;
+ justify-content: center;
+ padding-left: 23pc;
+ padding-top: 10pc;
+ font-size: larger;
+ font-family: Arial, Helvetica, sans-serif;
+ flex-direction: column;
 }
 .footer{
  padding-left: 5pc;
 }
 .whole{
- background-color:rgba(212, 211, 211, 0.918);
+ background-color:rgba(211, 209, 209, 0.918);
+ padding-left:1pc;
    
 }
 
@@ -32,6 +43,7 @@ background-size: cover;
  color: blue;
  font-size: larger;
  padding-left: 2pc;
+ padding-top: 2.5pc;
  
 }
 .other{
@@ -43,23 +55,38 @@ background-size: cover;
 .all{
  background-color:rgba(212, 211, 211, 0.918);
    border-radius: 0pc;width:300px;height: 200px;
-   float: right;	
+   float: right;
+   padding-bottom: 2.5pc;	
 }
 .also{
  background-color:rgba(212, 211, 211, 0.918);
    border-radius: 0pc;width: 300px;height: 200px;
        
 }
-input{
-    border-radius: 12px;
-    padding-top: 10px;
-    padding-left: 5pc;
-}
-.become{
+
+.contact{
    
-    position: relative;
-    bottom: 20px;
-    right: 12px;
+    padding-left: 6pc;
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .miss{
+    padding-top: 5pc;
+  }
+  iframe{
+    
+  
+    justify-content: center;
+    display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+    
+  }
+  input{
+    border-radius: 4pc;
+    color: rgb(19, 23, 218);
+    width: 10pc;height: 1pc;
+    padding-left: 3pc;
   }
     
 
