--- a/css/Admin.css
+++ b/css/Admin.css
@@ -1,60 +1,156 @@
-a{ color:black;
-    text-decoration:none;
-     font-size:2em;
-     padding: 25px;
-      }
-      
-     .tabs{
-         display: flex;
-         padding-left: 150px;
-     }
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+  }
+  
+  body{
+    margin: 0;
+    width: 100%;
+  }
+  
+  
+  a { color:black;
+      text-decoration:none;
+       font-size:1.1em;
+       padding-left: 90px;
+    }
+  
+  .tabs{
+           display: flex;
+           padding-left: 15px;
+       }
+  
+       
+  
+  
+  .content{
+   height: 100%;
+   width: 100%;
+   align-items: center;
+   position: absolute;
+   justify-content: center;
+   padding-left: 28pc;
+   padding-top: 20pc;
+   font-size: 60px;
+   font-family: Arial, Helvetica, sans-serif;
+   color: rgb(246, 249, 250);
+  
+  }
 
-   
+h2{
+ padding-left: 5pc;
 
-
-     .icons{
-         padding-left: 100px;
-     }
-     .container{
-         
-         border-radius: 25px;
-     }
-     .form{
-  padding-left: 35pc;
-  font-size: 1.5em;
-
-     }
-     .login{
-         padding-left: 42pc;
-         padding-top: 3pc;
-
-         border-color: rgb(115, 168, 214);
-     }
-     .content{
-         padding-left: 42pc;
-     }
-
-     .formula{
-         border-right:pc;
-         border-radius: 1pc;
-         background-color:rgba(212, 211, 211, 0.918);width: max-content;height: max-content;
-     }
-     .footer{
-         padding-left: 5pc;
-     }
-     .whole{
-   background-color:rgba(212, 211, 211, 0.918);
-   border-radius: 1pc;
- }
+}
+.footer{
+  text-align: center;
+  padding-top: 110px;
+  padding-left: 20pc;
+  color: white;
+}
+ .whole{
+    background-color:rgba(7, 64, 151, 0.918);
+    display: flex;
+    justify-content: space-between;
+  padding-right: 5pc;
+  padding-left: 2pc;
+  }
+ 
+   .search{
+     padding-top: 1.3pc;
+     justify-content: space-between;
+     display: flex;
+   }
  .contact{
-   padding-left: 2pc;
+  
+   padding-left: 6pc;
+   font-size: larger;
+   font-family: Arial, Helvetica, sans-serif;
+   
  }
- img{
+
+.path{
+ width: 100%;
+ margin: 0%;
+}
+input{
+ justify-content: space-between;
+ border-style: solid;
+ background-color: #d5d5d8;
+ padding: 4.5px;
+ border-radius: 8px;
+}
+button{
+ border-style: solid;
+ background-color: #e6eaeb;
+ border-radius: 5px;
+ font-style: italic;
+}
+
+.container {
+ width: 100%;
+ margin: 0%;
+}
+.description{
+ justify-content: space-between;
+ padding-left: 2pc;
+ 
+}
+.search-container{
+    justify-content: space-between;
+    padding-left: 110px;
+  }
+  h3{
+    text-align: right;
+    font-size: larger;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: blue;
+    }
+    .that{
+      padding-left: 5pc;
+      background-color:rgba(32, 29, 236, 0.918);
+      border-radius: 3pc;width:40%;height:80%;
+      margin: 10px auto;
+    }
+    .arrow{
+      padding-left: 10pc;
+    }
+    h6{
+      background-color: hsl(30, 36%, 96%);
+      border-radius: 1pc;width: 17pc;height: 1pc;
+    }
+    .wifi{
+      padding-left: 10pc;
+    }
+    
+    .rightcontent{
+      font-size: 2pc;
+      background: grey;
+      width: 20pc;
+      height: 25pc;
+      color: rgb(255, 255, 255);
+      margin-left: 30pc;
+      border-radius: 2pc;
+      padding-left: 5pc;
+      margin-bottom: 40px;
+    }
+    h5{
+      color: hsl(240, 27%, 96%);
+      font-size: smaller;
+      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', sans-serif;
+      padding-top: 5pc;
+
+    }
+    .magic{
+      color: #eaeaf0;
+    } 
+    h1{
+      color:  #eaeaf0;
+    }
+    
+
      
-     left: 0px;
-     right: 0px;
-     
- }
- .input{
-    border-radius: 5pc;
- }
+    
+    
+   
+    
+ 
