--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,28 +1,121 @@
-a{ color:black;
-    text-decoration:none;
-     font-size:2em;
-     padding: 25px;
-      }
-
-      
-     .tabs{
-         display: flex;
-         padding-left: 150px;
-     }
-     .image{
-         border-radius: 25px;
-     }
-
-      .content{
-          padding-left: 42pc;
-      }
-      .footer{
-         padding-left: 5pc;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+  }
+  
+  body{
+    margin: 0;
+    width: 100%;
+  }
+  
+  
+  a { color:black;
+      text-decoration:none;
+       font-size:1.1em;
+       padding-left: 90px;
+    }
+  
+  .tabs{
+           display: flex;
+           padding-left: 15px;
+       }
+       .footer{
+        text-align: center;
+        padding-top: 110px;
+        padding-left: 20pc;
       }
       .whole{
-   background-color:rgba(212, 211, 211, 0.918);
-   border-radius: 1pc;
- }
+        background-color:rgba(7, 64, 151, 0.918);
+        display: flex;
+        justify-content: space-between;
+         padding-right: 5pc;
+        padding-left: 2pc;
+        }
+      
+      .search{
+        padding-top: 1.3pc;
+        justify-content: space-between;
+        display: flex;
+        
+      }
+      .contact{
+       
+        padding-left: 6pc;
+        font-size: larger;
+        font-family: Arial, Helvetica, sans-serif;
+        
+      }
+      button{
+        border-style: solid;
+        background-color: #e6eaeb;
+        border-radius: 5px;
+      }
+      
+      
+      .container {
+        width: 100%;
+        margin: 0%;
+      }
+    
+    
+      input{
+        justify-content: space-between;
+        border-style: solid;
+        background-color: #d5d5d8;
+        padding: 4.5px;
+        border-radius: 8px;
+      }
+    .search-container{
+        justify-content: space-between;
+        padding-left: 110px;
+      }
+  
+  .content{
+   height: 100%;
+   width: 100%;
+   align-items: center;
+   position: absolute;
+   justify-content: center;
+   padding-left: 20pc;
+   padding-top: 10pc;
+   font-size: 60px;
+   font-family: Arial, Helvetica, sans-serif;
+   color: rgb(209, 213, 216);
+  
+  }
+.image{
+     border-radius: 25px;
+     margin: 0% auto;
+     padding: 0%;
+     width: 100%;
+}
+
+     
+      
+      .footer{
+        text-align: center;
+        padding-top: 110px;
+        padding-left: 20pc;
+        color: white;
+      }
+      
+      .way{
+        width: 100%;
+        margin: 0%;
+      }
+     
  .contact{
    padding-left: 2pc;
  }
+ h3{
+    text-align: right;
+    font-size: larger;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: blue;
+    }
+    .magic{
+      color: #eaeaf0;
+    }
+    h1{
+      color:  #eaeaf0;
+    }
