--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -83,12 +83,8 @@
    color: rgb(209, 213, 216);
   
   }
-.image{
-     border-radius: 25px;
-     margin: 0% auto;
-     padding: 0%;
-     width: 100%;
-}
+
+
 
      
       
@@ -119,3 +115,30 @@
     h1{
       color:  #eaeaf0;
     }
+    .gallery {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+  }
+  .single-img img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+  }
+  .small-img {
+      flex: 1 0 100px;
+  }
+  .medium-img {
+      flex: 1 0 400px;
+  }
+  .big-img {
+      flex: 1 0 600px;
+  }
+  @media screen and (min-width: 550px) {
+    .whole .footer i {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+ 
