--- a/css/Admin.css
+++ b/css/Admin.css
@@ -9,15 +9,16 @@
   }
   
   
-  a { color:black;
-      text-decoration:none;
-       font-size:1.1em;
-       padding-left: 90px;
-    }
+  a { color:#6b6bfcea;
+    text-decoration:none;
+    font-size:1.2em;
+    padding-left: 90px;
+    font-family: 'Times New Roman', Times, serif;
+  }
   
   .tabs{
-           display: flex;
-           padding-left: 15px;
+    display: flex;
+    padding-left: 15px;
        }
   
        
@@ -30,10 +31,10 @@
    position: absolute;
    justify-content: center;
    padding-left: 28pc;
-   padding-top: 20pc;
+   padding-top: 30pc;
    font-size: 60px;
    font-family: Arial, Helvetica, sans-serif;
-   color: rgb(246, 249, 250);
+   color:#6b6bfcea;
   
   }
 
@@ -47,13 +48,13 @@ h2{
   padding-left: 20pc;
   color: white;
 }
- .whole{
-    background-color:rgba(7, 64, 151, 0.918);
-    display: flex;
-    justify-content: space-between;
-  padding-right: 5pc;
+.whole{
+  background-color:#131a24ea;
+  display: flex;
+  justify-content: space-between;
   padding-left: 2pc;
-  }
+  padding-right: 5pc;
+}
  
    .search{
      padding-top: 1.3pc;
@@ -68,24 +69,26 @@ h2{
    
  }
 
-.path{
- width: 100%;
- margin: 0%;
-}
-input{
- justify-content: space-between;
- border-style: solid;
- background-color: #d5d5d8;
- padding: 4.5px;
- border-radius: 8px;
-}
-button{
- border-style: solid;
- background-color: #e6eaeb;
- border-radius: 5px;
- font-style: italic;
+ .now:hover{
+  width: 100%;
+  margin: 0%;
+  height: 800px;
+  transform:scale(1.10);
+  filter:grayscale(0%);
+  box-shadow:0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  transition:transform 500ms ease-in;
+ filter:grayscale(100%);
 }
 
+input:hover{
+  justify-content: space-between;
+  border-style: solid;
+  padding:4.5px;
+  font-style:  bold;
+}
+button:hover{
+  background-color: white;
+}
 .container {
  width: 100%;
  margin: 0%;
@@ -102,12 +105,12 @@ button{
   h3{
     text-align: right;
     font-size: larger;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: blue;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#131a24ea;
     }
     .that{
       padding-left: 5pc;
-      background-color:rgba(32, 29, 236, 0.918);
+      background-color: #6b6bfcea;
       border-radius: 3pc;width:40%;height:80%;
       margin: 10px auto;
     }
@@ -124,14 +127,19 @@ button{
     
     .rightcontent{
       font-size: 2pc;
-      background: grey;
+      background: #6b6bfcea;
       width: 20pc;
       height: 25pc;
       color: rgb(255, 255, 255);
       margin-left: 30pc;
-      border-radius: 2pc;
+      border-radius: 12px;
       padding-left: 5pc;
-      margin-bottom: 40px;
+      margin-bottom: 15px;
+      font-style: italic;
+      align-items: center;
+      position: absolute;
+      justify-content: center;
+      padding-bottom: 15pc;
     }
     h5{
       color: hsl(240, 27%, 96%);
@@ -144,9 +152,34 @@ button{
       color: #eaeaf0;
     } 
     h1{
-      color:  #eaeaf0;
+      color:  #6b6bfcea;
+      font-family: 'Times New Roman', Times, serif;
+    }
+    .cover{
+      width: 100%;
+      margin: 0%;
+      height: 500px;
+    }
+
+    #myBtn {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
+      z-index: 99;
+      font-size: 18px;
+      border: none;
+      outline: none;
+      background-color: #6b6bfcea;
+      color: white;
+      cursor: pointer;
+      padding: 15px;
+      border-radius: 4px;
     }
     
+    #myBtn:hover {
+      background-color: hsl(0, 94%, 51%);
+    }
 
      
     
