--- a/css/Announcement.css
+++ b/css/Announcement.css
@@ -9,11 +9,13 @@
   }
   
   
-  a { color:black;
-      text-decoration:none;
-       font-size:1.1em;
-       padding-left: 90px;
-    }
+  a { color:#6b6bfcea;
+    text-decoration:none;
+     font-size:1.2em;
+     padding-left: 90px;
+     font-family: 'Times New Roman', Times, serif;
+  }
+
   
   .tabs{
            display: flex;
@@ -48,12 +50,12 @@ h2{
    color:white;
  }
  .whole{
-    background-color:rgba(7, 64, 151, 0.918);
-    display: flex;
-    justify-content: space-between;
-  padding-right: 5pc;
+  background-color:#131a24ea;
+  display: flex;
+  justify-content: space-between;
   padding-left: 2pc;
-  }
+  padding-right: 5pc;
+}
  
    .search{
      padding-top: 1.3pc;
@@ -68,22 +70,27 @@ h2{
    
  }
 
-.path{
- width: 100%;
- margin: 0%;
+ .path:hover{
+  width: 100%;
+  margin: 0%;
+  height: 800px;
+  transform:scale(1.10);
+  filter:grayscale(0%);
+  box-shadow:0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+  transition:transform 500ms ease-in;
+ filter:grayscale(100%);
 }
-input{
- justify-content: space-between;
- border-style: solid;
- background-color: #d5d5d8;
- padding: 4.5px;
- border-radius: 8px;
+
+input:hover{
+  justify-content: space-between;
+  border-style: solid;
+  padding:4.5px;
+  font-style:  bold;
 }
-button{
- border-style: solid;
- background-color: #e6eaeb;
- border-radius: 5px;
+button:hover{
+  background-color: white;
 }
+
 
 .container {
  width: 100%;
@@ -101,22 +108,26 @@ button{
   h3{
     text-align: right;
     font-size: larger;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: blue;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#131a24ea;
     }
     .that{
-      padding-left: 5pc;
-      background-color:rgba(32, 29, 236, 0.918);
-      border-radius: 3pc;width:40%;height:80%;
-      margin: 10px auto;
+      padding:2%;
+      background-color:#6b6bfcea;
+      border-radius:10px;width:40%;height:100%;
+      margin-left: 450px;
+      color:white;
+      font-family: Arial, Helvetica, sans-serif;
+      align-items: center;
+      position: absolute;
+      justify-content: center;
+      padding-bottom: 0pc;
+      padding-left: 20px;
+      margin-top: 40px;
+      
+      
     
-    }
-    .arrow{
-      padding-left: 10pc;
-    }
-    h6{
-      background-color: hsl(30, 36%, 96%);
-      border-radius: 1pc;width: 17pc;height: 1pc;
+   
     }
     .wifi{
       padding-left: 10pc;
@@ -125,9 +136,36 @@ button{
       color: #eaeaf0;
     }
     h1{
-      color: white;
+      color:  #6b6bfcea;
+      font-family: 'Times New Roman', Times, serif;
     }
 
+    .cover{
+      width: 100%;
+      margin: 0%;
+      height: 800px;
+    }
+
+    
+    #myBtn {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 30px;
+      z-index: 99;
+      font-size: 18px;
+      border: none;
+      outline: none;
+      background-color: #6b6bfcea;
+      color: white;
+      cursor: pointer;
+      padding: 15px;
+      border-radius: 4px;
+    }
+    
+    #myBtn:hover {
+      background-color: hsl(0, 94%, 51%);
+    }
 
      
     
