--- a/css/Home.css
+++ b/css/Home.css
@@ -9,20 +9,21 @@ body{
 }
 
 
-a { color:rgb(4, 2, 12);
+a { color:#6b6bfcea;
     text-decoration:none;
-     font-size:1.1em;
+     font-size:1.2em;
      padding-left: 90px;
+     font-family:'Times New Roman', Times, serif;
      
   }
 
 .tabs{
-         display: flex;
-         padding-left: 15px;
-         
-     }
-
+  display: flex;
+  padding-left:15px;
+}        
      
+
+      
 
 
 .content{
@@ -31,9 +32,9 @@ a { color:rgb(4, 2, 12);
  align-items: center;
  position: absolute;
  justify-content: center;
- padding-left: 23pc;
+ padding-left: 18pc;
  padding-top: 10pc;
- font-size: larger;
+ font-size: 25px;
  font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -44,7 +45,7 @@ a { color:rgb(4, 2, 12);
   color: white;
 }
 .whole{
-  background-color:rgba(7, 64, 151, 0.918);
+  background-color:#131a24ea;
   display: flex;
   justify-content: space-between;
   padding-left: 2pc;
@@ -52,35 +53,35 @@ a { color:rgb(4, 2, 12);
 }
 
 .title{
- color: blue;
+ color: #6b6bfcea;
  font-size: larger;
  padding-left: 2pc;
  
  
 }
 .other{
- color: blue;
+ color: #6b6bfcea;
  font-size: larger;
  padding-left: 2pc;
  
  
 }
 .all{
- background-color:rgba(212, 211, 211, 0.918);
+ background-color:#131a24ea;
    border-radius: 5px;width:400px;height: 300px;
   font-style: oblique;
-  color: hsl(155, 90%, 25%);
-  padding-right: 5pc;
+  color: white;
+  
   
 
 }
    
 
 .also{
-    background-color:rgba(212, 211, 211, 0.918);
+    background-color:#131a24ea;
     border-radius: 5px;width: 400px;height: 300px;
     font-style: oblique;
-    color: hsl(155, 90%, 25%);
+    color: white;
 
 }     
 
@@ -103,24 +104,34 @@ a { color:rgb(4, 2, 12);
     display: flex;
     margin-top: 20px;
     justify-content: space-between;
-    padding: 30px;
+    padding-left: 0px;
+    padding-bottom: 5px;
+    background-image:url("../imgs/po.png");
+    
   }
  
   
-  img{
+  .tee:hover{
     width: 100%;
+    height: 800px;
+    width: 100%;
+    transform:scale(1.10);
+    filter:grayscale(0%);
+    box-shadow:0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
+    transition:transform 500ms ease-in;
+   filter:grayscale(100%);
   }
-  input{
+ 
+  
+  input:hover{
     justify-content: space-between;
     border-style: solid;
-    background-color: #eaeaf0;
     padding:4.5px;
-    border-radius: 8px;
+    font-style:  bold;
+    
   }
-  button{
-    border-style: solid;
-    background-color: #e6eaeb;
-    border-radius: 5px;
+  button:hover{
+  border-style: solid;
   }
     
 
@@ -136,8 +147,8 @@ a { color:rgb(4, 2, 12);
 h3{
 text-align: right;
 font-size: larger;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-color: blue;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+color: #131a24ea;
 }
 .search-container{
   justify-content: space-between;
@@ -147,9 +158,33 @@ color: blue;
   color: #eaeaf0;
 }
 h1{
-  color:  #eaeaf0;
+  color:  #6b6bfcea;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font: 400;
 }
 @media  and (max-width: 1050px) {
   .tabs {
   font-size: 18px;
+}
+}
+
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #6b6bfcea;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: hsl(0, 94%, 51%);
 }
