--- a/css/Home.css
+++ b/css/Home.css
@@ -21,7 +21,10 @@ a { color:#6b6bfcea;
   display: flex;
   padding-left:15px;
 }        
-     
+marquee{
+  color: white;
+  font-style: italic;
+}  
 
       
 
@@ -71,9 +74,6 @@ a { color:#6b6bfcea;
    border-radius: 5px;width:400px;height: 300px;
   font-style: oblique;
   color: white;
-  
-  
-
 }
    
 
@@ -106,7 +106,8 @@ a { color:#6b6bfcea;
     justify-content: space-between;
     padding-left: 0px;
     padding-bottom: 5px;
-    background-image:url("../imgs/po.png");
+    margin-left: 5pc;
+    margin-right: 5pc;
     
   }
  
@@ -135,9 +136,11 @@ a { color:#6b6bfcea;
   }
     
 
-.container {
+.container{
   width: 100%;
   margin: 0%;
+  background-image: url("../imgs/umu.png");
+  
 }
 .search{
   padding-top: 1.3pc;
@@ -162,11 +165,6 @@ h1{
   font-family: Georgia, 'Times New Roman', Times, serif;
   font: 400;
 }
-@media  and (max-width: 1050px) {
-  .tabs {
-  font-size: 18px;
-}
-}
 
 
 #myBtn {
@@ -188,3 +186,26 @@ h1{
 #myBtn:hover {
   background-color: hsl(0, 94%, 51%);
 }
+
+
+@media only screen and (max-width: 1400px) {
+  a {
+display: flex;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
+
+
+
+
+
+
+
+
+
