--- a/css/About us.css
+++ b/css/About us.css
@@ -119,6 +119,7 @@ button:hover{
 .container {
   width: 100%;
   margin: 0%;
+  background-image: url("../imgs/umu.png");
 }
 .description{
   justify-content: space-between;
@@ -142,7 +143,7 @@ label{
 }
 .leftcontent{
 text-align: justify;
-font-size: large;
+font-size: larger;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 
