--- a/css/Admin.css
+++ b/css/Admin.css
@@ -92,6 +92,7 @@ button:hover{
 .container {
  width: 100%;
  margin: 0%;
+ background-image: url("../imgs/umu.png");
 }
 .description{
  justify-content: space-between;
