--- a/css/Announcement.css
+++ b/css/Announcement.css
@@ -95,6 +95,7 @@ button:hover{
 .container {
  width: 100%;
  margin: 0%;
+ background-image: url("../imgs/umu.png");
 }
 .description{
  justify-content: space-between;
