--- a/css/Home.css
+++ b/css/Home.css
@@ -4,7 +4,7 @@
 }
 
 body{
-  margin: 0;
+  margin: 0%;
   width: 100%;
 }
 
@@ -71,7 +71,7 @@ marquee{
 }
 .all{
  background-color:#131a24ea;
-   border-radius: 5px;width:400px;height: 300px;
+   border-radius: 5px;width:100%;height: 100%;
   font-style: oblique;
   color: white;
 }
@@ -188,17 +188,7 @@ h1{
 }
 
 
-@media only screen and (max-width: 1400px) {
-  a {
-display: flex;
-  }
-}
 
-@media only screen and (max-width: 1400px) {
-  body {
-    background-color: lightblue;
-  }
-}
 
 
 
