--- a/css/Home.css
+++ b/css/Home.css
@@ -71,7 +71,7 @@ marquee{
 }
 .all{
  background-color:#131a24ea;
-   border-radius: 5px;width:100%;height: 100%;
+   border-radius: 5px;width:400px;height: 300px;
   font-style: oblique;
   color: white;
 }
